Added init files for AI Worker webpage
Signed-off-by: Pyo <pyo@robotis.com>

--- a/.gitignore
+++ b/.gitignore
@@ -39,11 +39,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
-
 # Snowpack dependency directory (https://snowpack.dev/)
-web_modules/
 
 # TypeScript cache
 *.tsbuildinfo
@@ -134,3 +130,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# user-specific files
+.vitepress/cache
+.vitepress/dist
