--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "build:version": "node scripts/simple-deploy.js",
+    "build:all-versions": "node scripts/build-all-versions.js",
+    "generate:versions": "node scripts/generate-versions.js",
+    "serve:versions": "node scripts/serve-versions.js",
+    "serve:python": "python3 scripts/simple-http-server.py",
+    "tag:create": "read -p 'Enter version (e.g., 1.0): ' version && git tag v$version -m \"Release v$version\"",
+    "tag:push": "git push origin --tags"
   },
   "devDependencies": {
     "vitepress": "^1.6.3",
