chore: Update .gitignore to include version build temp directories and dynamically generated version files
Signed-off-by: ola31 <abrahamola80@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -139,4 +139,13 @@ dist
 .vitepress/cache
 .vitepress/dist
 
+# Version build temp directories
+docs/.vitepress/temp-builds/
+temp-builds/
+build-temp/
+
+# Dynamically generated version files
+docs/public/versions.json
+versions.json
+
 # user-specific files
