Update package dependencies and remove Zenoh documentation
Added 'markdown-it-include' as a new dependency in both package.json and package-lock.json. Removed the zenoh.md documentation file and updated the Vitepress configuration to reflect new navigation links for Zenoh-related content.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "markdown-it-include": "^2.0.0",
     "vitepress": "^1.6.3",
     "vitepress-plugin-tabs": "^0.7.1"
   }
